<resources>
    <string name="app_name">SignalTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="InfoText">Signal Tracker will measure the cell signal as you travel and also measure against Wifi locations.</string>
    <string name="enabledBox">Enabled</string>
    <string name="SaveDataToSd">Save</string>
    <string name="DataCount">None</string>
    <string name="scanNow">Scan</string>
    <string name="default_pipeline">
        {"@type":"edu.mit.media.funf.pipeline.BasicPipeline",
         "name":"default",
         "version":1,
         "data": [
                 
                 
                
                  
                 
                
                  
                 
                {"@type": "edu.mit.media.funf.probe.builtin.WifiProbe",
                  "@schedule": {"interval": 30}
                 },
                {"@type": "tprz.signaltracker.BandwidthProbe",
                  "@schedule": {"interval": 5}
                 }
         ],
        "archive": {
            
            "name": "SignalTracker",
            "@schedule": {"interval": 300}
        }
        }
    </string>
    <string name="defaultPreviousStationText">Previous:</string>
    <string name="defaultCurrentStationText">Searching...</string>
    <string name="addingStationText">Adding...</string>
    <string name="previousStationTextPrepend">Previous: %s</string>
    <string name="unknownStationText">Unknown</string>
    <string name="AddStationImageButtonText">Add Station</string>
    <string name="sync_button_text">Sync</string>
</resources>