<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:text="@string/InfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView android:text="@string/enabledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox android:id="@+id/enabledCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button android:id="@+id/archiveButton"
        android:text="@string/SaveDataToSd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/dataCountText"
        android:text="@string/DataCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button android:id="@+id/scanNowButton"
        android:text="@string/scanNow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>