<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Card visible layout -->
    <it.gmariotti.cardslib.library.view.ForegroundLinearLayout
        android:id="@+id/card_main_layout"
        style="@style/card.native.main_layout_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Compound view for Header Card
             If you want to customize this element use attr card:card_header_layout_resourceID
             You can also use your CardHeader subclass-->
        <!--<it.gmariotti.cardslib.library.view.component.CardHeaderView-->
        <!--style="@style/card.native.header_outer_layout"-->
        <!--android:id="@+id/card_header_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--card:card_header_layout_resourceID="@layout/native_base_header_layout"-->
        <!--android:layout_height="wrap_content"/>-->

        <LinearLayout
            android:id="@+id/card_thumb_and_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--<it.gmariotti.cardslib.library.view.component.CardThumbnailView-->
            <!--style="@style/card.native.card_thumbnail_outer_layout"-->
            <!--android:id="@+id/card_thumbnail_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--card:card_thumbnail_layout_resourceID="@layout/native_base_thumbnail_layout"-->
            <!--android:layout_height="match_parent"/>-->

            <!-- Main Content View -->
            <LinearLayout
                android:id="@+id/card_main_content_layout"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/station_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="91dp"
                    android:layout_gravity="start|top"
                    android:orientation="vertical">



                    <RelativeLayout
                        android:id="@+id/headerLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="Location"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#ff1b1b1b"
                            android:textSize="22sp"
                             />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/refreshButton"
                            android:src="@drawable/ic_refresh_grey600_18dp"
                            android:layout_gravity="right"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true" />

                        </RelativeLayout>

                    <TextView
                        android:id="@+id/location_prev_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/defaultPreviousStationText"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/location_curr_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defaultCurrentStationText"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_station_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:text=""
                        android:layout_alignParentStart="true"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add"
                        android:contentDescription="@string/AddStationImageButtonText"
                        android:layout_alignBottom="@+id/autoCompleteTextView"
                        android:layout_toEndOf="@+id/autoCompleteTextView" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </it.gmariotti.cardslib.library.view.ForegroundLinearLayout>

    <!-- Expand layout. You can customize this element with your CardExpand class -->
    <FrameLayout
        android:id="@+id/card_content_expand_layout"
        style="@style/card.native.main_contentExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

</LinearLayout><!-- From: file:/home/gabriele/Lavoro/Android/AndroidStudioProjects/wrks/cardslib/library-core/src/main/res/layout/native_card_thumbnail_layout.xml -->